--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="Theme.NVB_SuperApp" parent="android:Theme.Material.Light.NoActionBar" />
+    <style name="Theme.NVB_SuperApp" parent="android:Theme.Material.Light.NoActionBar" >
+
+    </style>
 
     <style name="SplashScreenTheme" parent="Theme.SplashScreen">
-        <item name="windowSplashScreenBackground">@color/black</item>
+        <item name="windowSplashScreenBackground">@color/white</item>
         <item name="windowSplashScreenAnimatedIcon">@drawable/ic_logo</item>
         <item name="postSplashScreenTheme">@style/Theme.NVB_SuperApp</item>
     </style>
+
 </resources>
